--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,24 @@
-<p>
-  auth works!
-</p>
+<div class="login-wrapper">
+  <form class="login">
+    <label class="title">
+      <h3 class="welcome">Welcome to</h3>
+      Limelight Foodcourt
+      <h5 class="hint">Use your Company ID to sign in or create one now</h5>
+    </label>
+    <div class="login-group">
+      <input class="username" type="text" id="login_username" placeholder="Username">
+      <input class="password" type="password" id="login_password" placeholder="Password">
+      <div class="checkbox">
+        <input type="checkbox" id="rememberme">
+        <label for="rememberme">
+          Remember me
+        </label>
+      </div>
+      <div class="error active">
+        Invalid user name or password
+      </div>
+      <button type="submit" class="btn btn-primary">NEXT</button>
+      <a href="javascript://" class="signup">Sign up for a Company ID</a>
+    </div>
+  </form>
+</div>
