--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,24 +1,38 @@
 <div class="login-wrapper">
-  <form class="login">
+  <form class="login" (submit)="tryLogin($event)">
     <label class="title">
       <h3 class="welcome">Welcome to</h3>
-      Limelight Foodcourt
+      {{title}}
       <h5 class="hint">Use your Company ID to sign in or create one now</h5>
     </label>
     <div class="login-group">
-      <input class="username" type="text" id="login_username" placeholder="Username">
-      <input class="password" type="password" id="login_password" placeholder="Password">
+      <input
+        class="username"
+        type="email"
+        id="login_email"
+        name="email"
+        placeholder="Email"
+        [(ngModel)]="data.email"
+      />
+      <input
+        class="password"
+        type="password"
+        id="login_password"
+        name="password"
+        placeholder="Password"
+        [(ngModel)]="data.password"
+      />
       <div class="checkbox">
         <input type="checkbox" id="rememberme">
         <label for="rememberme">
           Remember me
         </label>
       </div>
-      <div class="error active">
-        Invalid user name or password
+      <div class="error active" *ngIf="isFailed || sessionExpired">
+        {{error}}
       </div>
-      <button type="submit" class="btn btn-primary">NEXT</button>
-      <a href="javascript://" class="signup">Sign up for a Company ID</a>
+      <button [clrLoading]="isLoading" type="submit" class="btn btn-primary">NEXT</button>
+      <a href="https://people.llnw.net" class="signup" target="_blank">Sign up for a Company ID</a>
     </div>
   </form>
 </div>
