Add test header

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,3 +1,16 @@
-<p>
-  container works!
-</p>
+<header class="header-6">
+  <div class="branding">
+    <a class="nav-link" href="/">
+      <span class="title">Limelight FoodCourt</span>
+    </a>
+  </div>
+  <div class="header-nav">
+    <a href="javascript://" class="active nav-link nav-text">Dashboard</a>
+    <a href="javascript://" class="nav-link nav-text">Interactive Analytics</a>
+  </div>
+  <div class="header-actions">
+    <a href="javascript://" class="nav-link nav-icon">
+      <!--<clr-icon shape="cog"></clr-icon>-->
+    </a>
+  </div>
+</header>
