Add user property to session

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,24 +1,1 @@
-<header class="header-6">
-  <div class="branding">
-    <a class="nav-link" href="/">
-      <span class="title">Limelight FoodCourt</span>
-    </a>
-  </div>
-  <div class="header-nav">
-    <a href="javascript://" class="active nav-link nav-text">Dashboard</a>
-    <a href="javascript://" class="nav-link nav-text">Interactive Analytics</a>
-  </div>
-  <div class="header-actions">
-    <clr-dropdown>
-      <button class="nav-icon" clrDropdownTrigger>
-        <clr-icon shape="user"></clr-icon>
-        <clr-icon shape="caret down"></clr-icon>
-      </button>
-      <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-        <a href="..." clrDropdownItem>About</a>
-        <a href="..." clrDropdownItem>Preferences</a>
-        <a href="..." clrDropdownItem>Log out</a>
-      </clr-dropdown-menu>
-    </clr-dropdown>
-  </div>
-</header>
+<app-header [user]="user" (logout)="onLogoutClick()"></app-header>
