--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,1 +1,1 @@
-<app-header [user]="user" (logout)="onLogoutClick()"></app-header>
+<app-header [user]="currentUser" (logout)="onLogoutClick()"></app-header>
