Add: ratings component, food cart, demo dash

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,1 +1,6 @@
-<app-header [user]="currentUser" (logout)="onLogoutClick()"></app-header>
+<clr-main-container class="main-container">
+  <app-header [user]="currentUser" (logout)="onLogoutClick()"></app-header>
+
+    <router-outlet></router-outlet>
+
+</clr-main-container>
