Finish ratings, add selected state

--- a/src/app/shared/components/food-card/food-card.component.html
+++ b/src/app/shared/components/food-card/food-card.component.html
@@ -1,4 +1,4 @@
-<div class="card food-card">
+<div class="card food-card clickable" [ngClass]="{'food-card--selected': selected}">
   <div class="food-card__frame">
     <img src="/assets/sushi.jpg" class="card-media-image food-card__image">
   </div>
@@ -13,7 +13,7 @@
 
     </div>
   </div>
-  <div class="card-footer">
+  <div class="card-block">
     <div class="row">
       <div class="food-card__category col-xs-4">
         <span class="badge badge-success">Garnish</span>
@@ -22,5 +22,17 @@
         <app-rating [value]="4.5"></app-rating>
       </div>
     </div>
+  </div>
+  <div class="card-footer text-center" [ngClass]="{'food-card__footer--active': selected}">
+    <button *ngIf="!selected" class="btn btn-sm btn-link btn-block food-card__check" (click)="toggleSelected()">
+      Select
+    </button>
+    <button
+      *ngIf="selected"
+      class="btn btn-sm btn-primary btn-block food-card__uncheck"
+      (click)="toggleSelected()"
+    >
+      Selected
+    </button>
   </div>
 </div>
