--- a/src/app/container/dashboard/dashboard.component.html
+++ b/src/app/container/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-        <app-food-card></app-food-card>
+        <app-food-card [disabled]="true"></app-food-card>
       </div>
 
 
