--- a/src/app/container/dashboard/dashboard.component.html
+++ b/src/app/container/dashboard/dashboard.component.html
@@ -5,11 +5,11 @@
     <div class="row">
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-        <app-food-card></app-food-card>
+        <app-food-card [selectable]="false" [rateable]="true" [rating]="2.5"></app-food-card>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-        <app-food-card [disabled]="true"></app-food-card>
+        <app-food-card [disabled]="true" [rating]="3.5"></app-food-card>
       </div>
 
 
