--- a/src/app/container/dashboard/dashboard.component.html
+++ b/src/app/container/dashboard/dashboard.component.html
@@ -9,6 +9,9 @@
           [rating]="2.5"
           label="Бульйон з індика"
           category="soup"
+          [rateable]="true"
+          [editable]="true"
+          [selectable]="true"
           badgeColor="purple"
         ></app-food-card>
       </div>
@@ -16,12 +19,27 @@
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
         <app-food-card
           [rating]="3.5"
-          label="Гречка+Биточок під грибним соусом"
+          label="Гречка"
           imageUrl="/assets/sushi.jpg"
           category="main course"
           badgeColor="blue"
+          [editable]="true"
+          [selectable]="true"
         ></app-food-card>
       </div>
+
+      <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+        <app-food-card
+          [rating]="3.5"
+          label="Биточок під грибним соусом"
+          imageUrl="/assets/sushi.jpg"
+          category="main course"
+          badgeColor="blue"
+          [editable]="true"
+          [selectable]="true"
+        ></app-food-card>
+      </div>
+
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
         <app-food-card
