--- a/src/app/shared/components/food-card/food-card.component.html
+++ b/src/app/shared/components/food-card/food-card.component.html
@@ -5,10 +5,10 @@
   <div class="food-card__frame">
     <img [src]="imageUrl" class="card-media-image food-card__image" [alt]="label" />
     <div class="food-card__overlay" *ngIf="editable">
-      <button class="btn btn-inverse" (click)="edit.emit()">
+      <a [href]="editorUrl" target="_blank" class="btn btn-inverse" (click)="edit.emit()">
         <clr-icon shape="cog"></clr-icon>
         Edit
-      </button>
+      </a>
     </div>
   </div>
   <div class="card-block">
