--- a/src/app/container/header/header.component.html
+++ b/src/app/container/header/header.component.html
@@ -5,8 +5,21 @@
     </a>
   </div>
   <div class="header-nav">
-    <a href="javascript://" class="active nav-link nav-text">Dashboard</a>
-    <a href="javascript://" class="nav-link nav-text">Interactive Analytics</a>
+    <a
+      routerLink="/dashboard"
+      routerLinkActive="active"
+      class="nav-link nav-text"
+    >
+      Orders
+    </a>
+    <a
+      *ngIf="isAdmin"
+      routerLink="/management"
+      routerLinkActive="active"
+      class="nav-link nav-text"
+    >
+      Management
+    </a>
   </div>
   <div class="header-actions">
     <b class="nav-link nav-text">Wellcome, {{user.firstName}} {{user.lastName}}</b>
