--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,5 +1,5 @@
 <div class="content-container">
-  <div class="content-area">
+  <div class="content-area flex-row">
     <router-outlet></router-outlet>
   </div>
   <nav class="sidenav">
