--- a/src/app/management/items-catalog/items-catalog.component.html
+++ b/src/app/management/items-catalog/items-catalog.component.html
@@ -15,6 +15,7 @@
     <app-food-card
       [rating]="5"
       [label]="item.label"
+      [description]="item.description"
       [category]="getDishCategory(item.type)"
       [rateable]="false"
       [editable]="true"
