--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,6 +1,6 @@
 <span class="spinner" [ngClass]="{'spinner-inline': inline}">
-    Loading...
+    {{text}}
 </span>
 <span *ngIf="inline">
-  Loading...
+  {{text}}
 </span>
