Check for empty props at food-cart. Fix img picker

--- a/src/app/management/items-catalog/items-catalog.component.html
+++ b/src/app/management/items-catalog/items-catalog.component.html
@@ -44,6 +44,7 @@
       [label]="item.label"
       [description]="item.description"
       [category]="getDishCategory(item.type)"
+      [imageUrl]="item.photoUrl"
       [rateable]="false"
       [editable]="true"
       [selectable]="true"
