--- a/src/app/shared/components/food-card/food-card.component.html
+++ b/src/app/shared/components/food-card/food-card.component.html
@@ -22,7 +22,12 @@
         {{label}}
       </h4>
       <p class="food-card__text">
-        {{description}}
+        <span *ngIf="hasDescription">
+          {{description}}
+        </span>
+        <span *ngIf="!hasDescription">
+          <i>No description</i>
+        </span>
       </p>
     </div>
   </div>
