--- a/src/app/management/items-catalog/items-catalog.component.html
+++ b/src/app/management/items-catalog/items-catalog.component.html
@@ -1,5 +1,5 @@
 <!-- Page header -->
-<app-header-toolbar title="Dishes">
+<app-header-toolbar label="Dishes">
   <button *ngIf="selectedIds.length > 0" type="button" class="btn btn-danger">
     <clr-icon shape="trash"></clr-icon>
     <span>Delete selected</span>
