--- a/src/app/shared/components/header-toolbar/header-toolbar.component.html
+++ b/src/app/shared/components/header-toolbar/header-toolbar.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6 col-xs-12">
-    <h1 style="margin-top: 0">{{title}}</h1>
+    <h1 style="margin-top: 0">{{label}}</h1>
   </div>
   <div class="col-sm-6 col-xs-12" style="text-align: right">
     <ng-content></ng-content>
