--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,14 @@
 .flex-1 {
   flex: 1;
 }
+
+.text-center {
+  text-align: center;
+}
+
+.block-spaced {
+  padding: {
+    top: 25px;
+    bottom: 25px;
+  }
+}
