--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -4,7 +4,7 @@
   </div>
   <nav class="sidenav">
     <section class="sidenav-content">
-      <a routerLink="/management" routerLinkActive="active" class="nav-link">
+      <a routerLink="/management/catalog" routerLinkActive="active" class="nav-link">
         Items
       </a>
       <a routerLink="/management/schedule" routerLinkActive="active" class="nav-link">
