--- a/src/app/management/dishes-list/dishes-list.component.scss
+++ b/src/app/management/dishes-list/dishes-list.component.scss
@@ -12,3 +12,12 @@
   overflow: auto;
   flex: 1;
 }
+
+.card-header.dishes-list__label {
+  font-size: 11pt;
+}
+
+.dishes-list__type {
+  float: right;
+  margin-right: 0;
+}
