--- a/src/app/management/dishes-list/dishes-list.component.html
+++ b/src/app/management/dishes-list/dishes-list.component.html
@@ -4,10 +4,10 @@
 <div class="dishes-list__container">
   <div class="dishes-list" *ngIf="displayedItems.length > 0">
     <div class="card" *ngFor="let item of displayedItems">
-      <div class="card-header">
+      <div class="card-header dishes-list__label">
         {{item.label}}
 
-        <span class="label label-{{getDishCategoryColor(item.type)}}" style="float: right">
+        <span class="label label-{{getDishCategoryColor(item.type)}} dishes-list__type">
           {{getDishCategory(item.type)}}
         </span>
       </div>
