--- a/src/app/shared/components/header-toolbar/header-toolbar.component.html
+++ b/src/app/shared/components/header-toolbar/header-toolbar.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-sm-6 col-xs-12">
+  <div class="col-xs-12" [ngClass]="{'col-sm-6': !smaller, 'col-sm-8': smaller}">
     <h1 style="margin-top: 0" *ngIf="!smaller">{{label}}</h1>
     <h2 style="margin-top: 0" *ngIf="smaller">{{label}}</h2>
   </div>
-  <div class="col-sm-6 col-xs-12" style="text-align: right">
+  <div class="col-xs-12" style="text-align: right" [ngClass]="{'col-sm-6': !smaller, 'col-sm-4': smaller}">
     <ng-content></ng-content>
   </div>
 </div>
