--- a/src/app/management/dishes-list/dishes-list.component.html
+++ b/src/app/management/dishes-list/dishes-list.component.html
@@ -9,7 +9,13 @@
 </div>
 <div class="dishes-list__container">
   <div class="dishes-list" *ngIf="displayedItems.length > 0">
-    <div class="card dishes-list__card" *ngFor="let item of displayedItems">
+    <div
+      class="card dishes-list__card"
+      *ngFor="let item of displayedItems"
+      title="Click to add an item to the menu"
+      dnd-draggable
+      [dragEnabled]="true"
+    >
       <div class="card-header dishes-list__label">
         {{item.label}}
 
