--- a/src/app/management/dishes-list/dishes-list.component.html
+++ b/src/app/management/dishes-list/dishes-list.component.html
@@ -9,20 +9,22 @@
 </div>
 <div class="dishes-list__container">
   <div class="dishes-list" *ngIf="displayedItems.length > 0">
-    <div
-      class="card dishes-list__card"
-      *ngFor="let item of displayedItems"
-      title="Click to add an item to the menu"
-      dnd-draggable
-      [dragEnabled]="true"
-    >
-      <div class="card-header dishes-list__label">
-        {{item.label}}
+    <ng-template ngFor let-item [ngForOf]="displayedItems">
+      <div
+        *ngIf="!selectedIds.includes(item.id)"
+        class="card dishes-list__card"
+        title="Click to add an item to the menu"
+        dnd-draggable
+        [dragData]="item"
+      >
+        <div class="card-header dishes-list__label">
+          {{item.label}}
 
-        <span class="label label-{{getDishCategoryColor(item.type)}} dishes-list__type">
+          <span class="label label-{{getDishCategoryColor(item.type)}} dishes-list__type">
           {{getDishCategory(item.type)}}
         </span>
+        </div>
       </div>
-    </div>
+    </ng-template>
   </div>
 </div>
