--- a/src/app/management/menu-editor/menu-editor.component.scss
+++ b/src/app/management/menu-editor/menu-editor.component.scss
@@ -10,8 +10,8 @@
   position: fixed;
   right: 0;
   height: calc(100vh - 61px);
-  //padding-left: 0;
-  //padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .menu-editor__header {
